# blocks

./: Cargo.toml
blocks-frontend/: Cargo.toml
blocks-frontend/src/: main.rs
src/: main.rs
static/: main.css
