[package]
name = "blocks-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
js-sys = "0.3.58"
livid = "0.2.12"
reqwest = { version = "0.11.11" }
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.57", features = [
	"Response",
	"Request",
	"RequestInit",
	"RequestMode",
	"WebSocket",
	"BinaryType",
	"Blob",
	"ErrorEvent",
	"FileReader",
	"MessageEvent",
	"ProgressEvent",
]}
